# django-app

./: .dockerignore  .gitignore  README.md  dev.Dockerfile  prd.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
app/: settings.py  wsgi.py
nginx/: Dockerfile  nginx.conf
scripts/: build_dev_image.sh  build_prd_image.sh  create_venv.sh  entrypoint.sh  install.sh  upgrade.sh  validate.sh
workspace/: dev_resources.py  prd_resources.py  settings.py
workspace/example_secrets/: dev_db_secrets.yml  prd_app_secrets.yml  prd_db_secrets.yml
